Fixed an overflow issue in safari.

--- a/src/components/SectionIcon.css
+++ b/src/components/SectionIcon.css
@@ -12,6 +12,7 @@
   height: 150px;
   transform: rotate(90deg);
   overflow: hidden;
+  position: relative;
   border-radius: 10px;
   box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.5);
 }
